name:                poker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/farrellm/poker#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Farrell
maintainer:          farrellm@alum.mit.edu
copyright:           2016 Matthew Farrell
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , LibBits
                     , BitVector
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , ghc-prim
                     , microlens-platform
                     , mtl
                     , mwc-random
                     , primitive
                     , text-format
                     , vector
  default-language:    Haskell2010

executable poker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , poker
  default-language:    Haskell2010

test-suite poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/farrellm/poker
